[tool.poetry]
name = "replutil"
version = "0.1.1"
description = "A collection of utilities for running services on repl.it"
authors = ["regulad <regulad@regulad.xyz>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/regulad/replutil"
repository = "https://github.com/regulad/replutil"
packages = [
    { include = "replutil" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
click = "^8.0.3"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[tool.black]
line-length = 127

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
